--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ pest = "2.7.6"
 pest_consume = "1.1.3"
 lazy_static = "1.4.0"
 symbol_table = { version = "0.3.0", features = ["global"] }
+num-bigint = "0.4.4"
