--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ pest_consume = "1.1.3"
 lazy_static = "1.4.0"
 symbol_table = { version = "0.3.0", features = ["global"] }
 num-bigint = "0.4.4"
+
+[dev-dependencies]
+lit = "0.3.4"
