--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4.0"
 symbol_table = { version = "0.3.0", features = ["global"] }
 num-bigint = "0.4.4"
 bincode = "1.3.3"
+indenter = "0.2"
 
 [dev-dependencies]
 lit = "0.3.4"
