--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ symbol_table = { version = "0.3.0", features = ["global"] }
 num-bigint = "0.4.4"
 bincode = "1.3.3"
 indenter = "0.2"
+num-traits = "0.2.18"
 
 [dev-dependencies]
 lit = "0.3.4"
