--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
-miette = "5.10.0"
 pest = "2.7.6"
 pest_consume = "1.1.3"
 lazy_static = "1.4.0"
@@ -16,6 +15,8 @@ num-bigint = "0.4.4"
 bincode = "1.3.3"
 indenter = "0.2"
 num-traits = "0.2.18"
+codespan = "0.11.1"
+codespan-reporting = "0.11.1"
 
 [dev-dependencies]
 lit = "0.3.4"
