--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "circt"]
-	path = circt
-	url = git@github.com:llvm/circt.git
+[submodule "external/circt"]
+	path = external/circt
+	url = git@github.com:llvm/circt
