misc: bump circt

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "external/circt"]
 	path = external/circt
 	url = git@github.com:devins2518/circt.git
-	branch = arc-capi
+	branch = main
